--- a/index.html
+++ b/index.html
@@ -1,39 +1,207 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Sopa de Mainha</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Montserrat', sans-serif;
-            background-color: #fdf6e3;
-            -webkit-tap-highlight-color: transparent;
-        }
-        h1, h2, h3 {
-            font-family: 'Bree+Serif', serif;
-        }
-        .bg-pattern {
-            background-image: url('https://www.transparenttextures.com/patterns/papyros.png');
-        }
-        .no-scrollbar::-webkit-scrollbar {
-            display: none;
-        }
-        .no-scrollbar {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-        }
-    </style>
-
-<link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="bg-pattern min-h-screen">
-    <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+
+    <div class="max-w-6xl mx-auto pb-32 md:pb-24 px-3 md:px-6">
+        <!-- Header -->
+        <header class="py-6 md:py-12 px-4 text-center">
+            <h1
+                class="text-4xl md:text-7xl font-bold text-[#6b3e26] mb-1 md:mb-2 transition-all hover:scale-105 cursor-default">
+                Sopa de Mainha
+            </h1>
+            <div class="flex items-center justify-center gap-2 md:gap-4">
+                <div class="h-[1px] bg-[#6b3e26] w-8 md:w-32 opacity-50"></div>
+                <p
+                    class="text-[10px] md:text-base tracking-[0.1em] md:tracking-[0.2em] text-[#8b4513] font-semibold uppercase">
+                    O Tempero Arretado do Interior
+                </p>
+                <div class="h-[1px] bg-[#6b3e26] w-8 md:w-32 opacity-50"></div>
+            </div>
+        </header>
+
+        <main
+            class="bg-white rounded-2xl md:rounded-3xl shadow-xl shadow-stone-200/50 border border-stone-100 overflow-hidden mb-8 md:mb-12">
+            <div class="pt-6 md:pt-12 px-4 md:px-12 text-center">
+                <h2 class="text-2xl md:text-5xl font-bold text-[#6b3e26] mb-1">O que tem pra hoje?</h2>
+                <p class="text-stone-400 text-xs md:text-lg font-medium italic">Achegue-se! escolha o seu prato favorito
+                </p>
+            </div>
+
+            <!-- Day Selector -->
+            <section class="sticky top-0 z-40 bg-white/95 backdrop-blur-md border-b border-stone-100 mt-6">
+                <div class="px-2 md:px-12 py-3">
+                    <div id="week-selector"
+                        class="flex overflow-x-auto gap-2 no-scrollbar snap-x snap-mandatory scroll-smooth pb-1">
+                        <!-- Days injected by JS -->
+                    </div>
+                </div>
+            </section>
+
+            <div class="p-4 md:p-12">
+                <!-- Category Selector -->
+                <div id="category-selector" class="flex gap-2 overflow-x-auto no-scrollbar mb-6 md:mb-8 pb-1">
+                    <!-- Categories injected by JS -->
+                </div>
+
+                <!-- Menu Grid -->
+                <div id="menu-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 md:gap-8">
+                    <!-- Cards injected by JS -->
+                </div>
+            </div>
+        </main>
+
+        <footer
+            class="mt-8 md:mt-12 mb-20 md:mb-0 text-center text-stone-400 text-[9px] md:text-xs uppercase tracking-[0.4em]">
+            © 2024 Sopa de Mainha • Feito no Sertão
+        </footer>
+    </div>
+
+    <!-- Details Modal -->
+    <div id="details-modal"
+        class="fixed inset-0 z-[100] hidden flex items-end md:items-center justify-center p-0 md:p-4 bg-black/70 backdrop-blur-sm animate-fade-in">
+        <div
+            class="bg-white rounded-t-2xl md:rounded-3xl w-full max-w-xl max-h-[90vh] overflow-y-auto shadow-2xl animate-slide-up no-scrollbar">
+            <div id="modal-content">
+                <!-- Content injected by JS -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Checkout Modal -->
+    <div id="checkout-modal"
+        class="fixed inset-0 z-[120] hidden flex items-center justify-center p-3 md:p-4 bg-black/80 backdrop-blur-sm animate-fade-in">
+        <div class="bg-[#fdf6e3] rounded-2xl md:rounded-3xl w-full max-w-lg overflow-hidden shadow-2xl">
+            <div class="bg-[#6b3e26] p-4 md:p-6 text-white text-center">
+                <h2 class="text-xl md:text-2xl font-bold italic">Quase lá! 🌵</h2>
+                <p class="text-[9px] md:text-xs opacity-80 uppercase tracking-widest mt-1">Informe onde entregamos</p>
+            </div>
+
+            <form id="checkout-form" class="p-4 md:p-8 space-y-3 md:space-y-4">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-3 md:gap-4">
+                    <div>
+                        <label
+                            class="block text-[10px] md:text-xs font-bold text-[#6b3e26] uppercase tracking-wider mb-1">Seu
+                            Nome</label>
+                        <input required type="text" id="cust-name"
+                            class="w-full bg-white border border-stone-200 rounded-lg md:rounded-xl px-3 py-2 md:px-4 md:py-3 text-sm text-stone-800 focus:ring-2 focus:ring-[#d2691e] focus:outline-none"
+                            placeholder="Seu nome">
+                    </div>
+                    <div>
+                        <label
+                            class="block text-[10px] md:text-xs font-bold text-[#6b3e26] uppercase tracking-wider mb-1">Pagamento</label>
+                        <select id="cust-payment"
+                            class="w-full bg-white border border-stone-200 rounded-lg md:rounded-xl px-3 py-2 md:px-4 md:py-3 text-sm text-stone-800 focus:ring-2 focus:ring-[#d2691e] focus:outline-none appearance-none">
+                            <option>Pix</option>
+                            <option>Cartão</option>
+                            <option>Dinheiro</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="bg-orange-50/50 p-4 rounded-xl border border-orange-100 flex items-center gap-4">
+                    <div class="bg-white p-2 rounded-full shadow-sm text-xl">🕒</div>
+                    <div class="flex-grow">
+                        <label class="block text-[10px] font-bold text-[#6b3e26] uppercase tracking-wider mb-0.5">Tempo
+                            Estimado</label>
+                        <select id="cust-time"
+                            class="w-full bg-transparent font-bold text-[#d2691e] text-sm focus:outline-none appearance-none cursor-pointer">
+                            <option>O mais rápido possível (30-50 min)</option>
+                            <option>Para daqui a 1 hora</option>
+                            <option>Para daqui a 2 horas</option>
+                            <option>Retirar na Loja (15 min)</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div>
+                    <label
+                        class="block text-[10px] md:text-xs font-bold text-[#6b3e26] uppercase tracking-wider mb-1">Endereço
+                        Completo</label>
+                    <input required type="text" id="cust-address"
+                        class="w-full bg-white border border-stone-200 rounded-lg md:rounded-xl px-3 py-2 md:px-4 md:py-3 text-sm text-stone-800 focus:ring-2 focus:ring-[#d2691e] focus:outline-none"
+                        placeholder="Rua, número">
+                </div>
+
+                <div class="grid grid-cols-2 gap-3 md:gap-4">
+                    <div>
+                        <label
+                            class="block text-[10px] md:text-xs font-bold text-[#6b3e26] uppercase tracking-wider mb-1">Bairro</label>
+                        <input required type="text" id="cust-neighborhood"
+                            class="w-full bg-white border border-stone-200 rounded-lg md:rounded-xl px-3 py-2 md:px-4 md:py-3 text-sm text-stone-800 focus:ring-2 focus:ring-[#d2691e] focus:outline-none"
+                            placeholder="Bairro">
+                    </div>
+                    <div>
+                        <label
+                            class="block text-[10px] md:text-xs font-bold text-[#6b3e26] uppercase tracking-wider mb-1">Referência</label>
+                        <input type="text" id="cust-reference"
+                            class="w-full bg-white border border-stone-200 rounded-lg md:rounded-xl px-3 py-2 md:px-4 md:py-3 text-sm text-stone-800 focus:ring-2 focus:ring-[#d2691e] focus:outline-none"
+                            placeholder="Ex: Perto do bar">
+                    </div>
+                </div>
+
+                <div class="pt-3 md:pt-4 flex gap-2 md:gap-3">
+                    <button type="button" id="close-checkout"
+                        class="flex-1 bg-stone-200 text-stone-600 font-bold py-3 md:py-4 rounded-xl md:rounded-2xl hover:bg-stone-300 transition-colors text-sm">
+                        Voltar
+                    </button>
+                    <button type="submit"
+                        class="flex-[2] bg-green-600 hover:bg-green-700 text-white font-bold py-3 md:py-4 rounded-xl md:rounded-2xl shadow-lg flex items-center justify-center gap-2 transition-transform active:scale-95 text-sm">
+                        Enviar 🚀
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Floating Cart Button -->
+    <button id="cart-float-btn"
+        class="hidden fixed bottom-6 left-1/2 -translate-x-1/2 md:left-auto md:right-8 md:translate-x-0 z-[90] bg-green-600 text-white px-8 py-4 md:px-10 md:py-5 rounded-full shadow-2xl flex items-center gap-3 md:gap-4 font-bold border-4 border-white transition-all hover:scale-105">
+        <span class="text-xl md:text-2xl">🛒</span>
+        <span class="text-base md:text-lg">Pedido</span>
+        <span id="cart-count-badge"
+            class="bg-white text-green-700 w-6 h-6 md:w-7 md:h-7 rounded-full flex items-center justify-center text-[10px] md:text-xs font-black">0</span>
+    </button>
+
+    <!-- Cart Sidebar -->
+    <div id="cart-sidebar"
+        class="fixed inset-0 md:inset-auto md:top-0 md:right-0 md:h-full w-full md:w-[450px] bg-white z-[110] shadow-2xl transition-transform duration-500 ease-in-out translate-x-full">
+        <div class="flex flex-col h-full">
+            <div class="p-4 md:p-6 flex justify-between items-center bg-[#6b3e26] text-white">
+                <div>
+                    <h2 class="text-lg md:text-2xl font-bold">Minha Sacola</h2>
+                    <p class="text-[9px] md:text-xs opacity-70 uppercase tracking-widest mt-0.5">Sopa de Mainha</p>
+                </div>
+                <button id="close-cart" class="text-2xl md:text-3xl hover:rotate-90 transition-transform p-2">✕</button>
+            </div>
+
+            <div id="cart-items" class="flex-grow overflow-y-auto p-4 md:p-6 bg-stone-50 space-y-3 md:space-y-4">
+                <!-- Cart items or empty state injected by JS -->
+            </div>
+
+            <div id="cart-footer" class="hidden p-5 md:p-8 bg-white border-t border-stone-100">
+                <div class="flex justify-between items-center mb-4 md:mb-6">
+                    <span class="font-bold text-stone-400 text-sm md:text-lg uppercase tracking-widest">Total</span>
+                    <span id="cart-total" class="text-2xl md:text-3xl font-black text-[#6b3e26]">R$ 0,00</span>
+                </div>
+                <button id="finalize-order-btn"
+                    class="w-full bg-green-600 hover:bg-green-700 text-white py-4 md:py-5 rounded-xl md:rounded-2xl font-bold shadow-xl transition-all text-lg md:text-xl flex items-center justify-center gap-2">
+                    <span>Finalizar Pedido</span>
+                    <span class="text-xl md:text-2xl">🌵</span>
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
