Style: Improve readability of dish descriptions

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <footer
             class="mt-8 md:mt-12 mb-20 md:mb-0 text-center text-stone-400 text-[9px] md:text-xs uppercase tracking-[0.4em]">
-            © 2024 Sopa de Mainha • Feito no Sertão
+            © 2025 Lucas Pedro - InovaStack
         </footer>
     </div>
 
