--- a/index.html
+++ b/index.html
@@ -53,8 +53,42 @@
                 </div>
 
                 <!-- Menu Grid -->
-                <div id="menu-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 md:gap-8">
+                <div id="menu-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 md:gap-8 mb-12">
                     <!-- Cards injected by JS -->
+                </div>
+
+                <!-- Daily Specials Section -->
+                <div class="mb-12">
+                    <div class="flex items-center gap-4 mb-6">
+                        <h2 class="text-2xl md:text-4xl font-bold text-[#6b3e26]">Comidas da Casa</h2>
+                        <div class="h-[1px] bg-[#d2691e] flex-grow opacity-30"></div>
+                    </div>
+                    <p class="text-stone-600 mb-6 italic">Todo dia tem, quentinho pra tu.</p>
+                    <div id="daily-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 md:gap-8">
+                        <!-- Injected by JS -->
+                    </div>
+                </div>
+
+                <!-- Drinks Section -->
+                <div class="mb-12">
+                    <div class="flex items-center gap-4 mb-6">
+                        <h2 class="text-2xl md:text-4xl font-bold text-[#6b3e26]">Para Beber</h2>
+                        <div class="h-[1px] bg-[#d2691e] flex-grow opacity-30"></div>
+                    </div>
+                    <div id="drinks-grid" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 md:gap-4">
+                        <!-- Injected by JS -->
+                    </div>
+                </div>
+
+                <!-- Desserts Section -->
+                <div class="mb-12">
+                    <div class="flex items-center gap-4 mb-6">
+                        <h2 class="text-2xl md:text-4xl font-bold text-[#6b3e26]">Sobremesas</h2>
+                        <div class="h-[1px] bg-[#d2691e] flex-grow opacity-30"></div>
+                    </div>
+                    <div id="desserts-grid" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3 md:gap-4">
+                        <!-- Injected by JS -->
+                    </div>
                 </div>
             </div>
         </main>
