--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sopa de Mainha</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body class="bg-pattern min-h-screen">
